# personal-workout-tracker

./: .gitignore  CLAUDE.md  README.md  compose.yaml  test.txt
server/: Dockerfile  main.py  pyproject.toml
server/api/routes/: exercise.py  exercise_entry.py  planned_set.py  routine.py  routine_exercise.py  set_entry.py  workout.py
server/data/: __init__.py
server/data/models/: exercise.py  models.py  planned_set.py  response_models.py  routine.py  table_models.py  workout.py
server/data/services/: exercise_service.py  routine_service.py  workout_service.py
server/data/sql/: schema.sql
web/: .env.example  Dockerfile  README.md  package-lock.json  package.json
web/design/: mock-v1.html  mock-v2.html  original_mock.html
web/docs/: PRD.md  STORIES.md
web/src/api/: client.ts  exercises.ts  routines.ts  types.ts  workouts.ts
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/exercises/: page.tsx
web/src/app/routines/: page.tsx
web/src/app/workouts/: page.tsx
web/src/components/exercise/: index.ts
web/src/components/layout/: AppShell.tsx  NavDrawer.tsx  Providers.tsx  TopBar.tsx  index.ts
web/src/components/routine/: index.ts
web/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  EmptyState.tsx  ErrorBanner.tsx  FormField.tsx  IconButton.tsx  ListRow.tsx  LoadingSkeleton.tsx  OfflineBanner.tsx  SearchInput.tsx  SectionHeader.tsx  Sheet.tsx  Toggle.tsx  WorkoutTypeSelect.tsx  index.ts
web/src/config/: env.ts
web/src/design/: tokens.ts
web/src/lib/: utils.ts
web/src/security/: auth.ts  guards.ts  session.ts
(+14 files in other folders)
